--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body{
-  background-color: #000;
+  /* background-image: url(./assets/bg-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: contain; */
+
+  /* backgournd: color image repeat position/size */ 
+
+  background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+
 }
