--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@ body{
   background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
 
 }
+
+#container{
+  border: 1px solid yellowgreen;
+
+  width: 360px;
+  height: 712px;
+}
