set profile image properties

--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@ body{
 
 #container{
   border: 1px solid yellowgreen;
-
   width: 360px;
-  height: 712px;
+  margin: auto;
+}
+
+#profile img{
+  width: 112px;
   margin: auto;
 }
