--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
 body{
-  /* background-image: url(./assets/bg-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: contain; */
-
-  /* backgournd: color image repeat position/size */ 
-
   background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+}
 
+body *{
+  font-family: 'Inter', sans-serif;
+  color: #ffffff;
 }
 
 #container{
@@ -22,4 +19,10 @@ body{
 
 #profile img{
   width: 112px;
+}
+
+#profile p{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
 }
