--- a/style.css
+++ b/style.css
@@ -32,3 +32,16 @@ body *{
   line-height: 24px;
   padding-top: 8px;
 }
+
+/* links */
+ul{
+  list-style: none;
+ 
+}
+
+ul li a{
+  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  padding: 16px 24px;
+}
