--- a/style.css
+++ b/style.css
@@ -36,12 +36,20 @@ body *{
 /* links */
 ul{
   list-style: none;
- 
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 ul li a{
-  border: 1px solid red;
   display: flex;
+  align-items: center;
   justify-content: center;
+
   padding: 16px 24px;
+
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+  backdrop-filter: blur(4px);
 }
