adjust links of font

--- a/style.css
+++ b/style.css
@@ -52,4 +52,7 @@ ul li a{
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 8px;
   backdrop-filter: blur(4px);
+
+  text-decoration: none;
+  font-weight: 500;
 }
