--- a/style.css
+++ b/style.css
@@ -55,4 +55,11 @@ ul li a{
 
   text-decoration: none;
   font-weight: 500;
+
+  transition: background 0.2s;
+}
+/* pseudo-selector */
+ul li a:hover{
+  background: rgba(255, 255, 255, 0.05);
+  border: 1.5px solid white;
 }
