--- a/style.css
+++ b/style.css
@@ -4,13 +4,23 @@
   box-sizing: border-box;
 }
 
+:root{
+  --text-color: white;
+  --bg-url: url(./assets/bg-mobile.jpg);
+}
+
+.light{
+  --text-color: black;
+  --bg-url: url(./assets/bg-mobile-light.jpg);
+}
+
 body{
-  background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat top center/cover;
 }
 
 body *{
   font-family: 'Inter', sans-serif;
-  color: #ffffff;
+  color: var(--text-color);
 }
 
 #container{
@@ -65,7 +75,7 @@ ul li a{
 /* pseudo-selector */
 ul li a:hover{
   background: rgba(255, 255, 255, 0.05);
-  border: 1.5px solid white;
+  border: 1.5px solid var(--text-color);
 }
 
 /* social links */
@@ -97,5 +107,4 @@ footer{
   padding: 24px;
   text-align: center;
   font-size: 14px;
-  color: #ffffff;
 }
