--- a/style.css
+++ b/style.css
@@ -7,11 +7,20 @@
 :root{
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
+  --stroke-color: rgba(255, 255, 255, 0.5);
+  --surface-color:rgba(255, 255, 255, 0.05);
+  --surface-color-hover:rgba(0, 0, 0, 0.02);
+  --highlight-color:rgba(255, 255, 255, 0.2);
+   
 }
 
 .light{
   --text-color: black;
   --bg-url: url(./assets/bg-mobile-light.jpg);
+  --stroke-color: rgba(0, 0, 0, 0.5);
+  --surface-color:rgba(0, 0, 0, 0.05);
+  --surface-color-hover:rgba(0, 0, 0, 0.02);
+  --highlight-color:rgba(0, 0, 0, 0.1);
 }
 
 body{
@@ -62,8 +71,8 @@ ul li a{
 
   padding: 16px 24px;
 
-  background: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: var(--surface-color);
+  border: 1px solid var(--stroke-color);
   border-radius: 8px;
   backdrop-filter: blur(4px);
 
@@ -74,7 +83,7 @@ ul li a{
 }
 /* pseudo-selector */
 ul li a:hover{
-  background: rgba(255, 255, 255, 0.05);
+  background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
 
@@ -100,7 +109,7 @@ ul li a:hover{
 }
 
 #social-links a:hover{
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color:var(--highlight-color);
 }
 
 footer{
