--- a/style.css
+++ b/style.css
@@ -64,6 +64,16 @@ body *{
   border-radius: 50%;
 }
 
+#switch span{
+  display: block;
+  width: 64px;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--stroke-color);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 9999px;
+}
+
 /* links */
 ul{
   list-style: none;
@@ -85,7 +95,7 @@ ul li a{
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
-  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 
   text-decoration: none;
   font-weight: 500;
