--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 
 body{
   background: var(--bg-url) no-repeat top center/cover;
+  height:100vh;
 }
 
 body *{
@@ -156,4 +157,15 @@ footer{
   padding: 24px;
   text-align: center;
   font-size: 14px;
+}
+/* media queries */
+
+@media(min-width:700px){
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
