add smooth animation on slide button theme mode

--- a/style.css
+++ b/style.css
@@ -77,11 +77,15 @@ body *{
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-out 0.4s;
+}
+
+#switch button:hover{
+  outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button{
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
 }
 
 #switch span{
@@ -167,5 +171,25 @@ footer{
 
   .light{
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 50%;
+  }
+  to{
+    left: 0;
   }
 }
